[gd_scene load_steps=19 format=3 uid="uid://crbl1d7pxy6xj"]

[ext_resource type="Script" path="res://script/cleaner.gd" id="1_5k4jp"]
[ext_resource type="Texture2D" uid="uid://ba4813csrr6n2" path="res://art/level 1/character/CHARACTERS PLAT/PNG/Female/Poses/female_walk2.png" id="1_86oql"]
[ext_resource type="Texture2D" uid="uid://c7g8as2ij3qbo" path="res://art/level 1/character/CHARACTERS PLAT/PNG/Female/Poses/female_idle.png" id="2_mk802"]
[ext_resource type="Texture2D" uid="uid://dhb7t57mwlrlh" path="res://art/level 1/character/CHARACTERS PLAT/PNG/Female/Poses/female_walk1.png" id="3_esfpd"]
[ext_resource type="Texture2D" uid="uid://bmlub24ci5llg" path="res://art/level 1/character/CHARACTERS PLAT/PNG/Female/Poses/female_climb1.png" id="4_0pb7g"]
[ext_resource type="Texture2D" uid="uid://c1d2obayuuru1" path="res://art/level 1/character/CHARACTERS PLAT/PNG/Female/Poses/female_climb2.png" id="5_fy8jb"]
[ext_resource type="Texture2D" uid="uid://3qx3tb02hwr5" path="res://art/level 1/world/Indoors/Tilesheets/roguelikeIndoor_transparent.png" id="6_ptq3j"]
[ext_resource type="Texture2D" uid="uid://cy5hiynh7mqdf" path="res://art/level 1/character/URBAN PACK/Tilemap/tilemap.png" id="7_gffhx"]

[sub_resource type="Curve2D" id="Curve2D_ydl8v"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 817.26, -3, 0, 0, 0, 0, 1102.97, -16, 0, 0, 0, 0, 1244.72, -16)
}
point_count = 3

[sub_resource type="SpriteFrames" id="SpriteFrames_q8fq3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_mk802")
}, {
"duration": 1.0,
"texture": ExtResource("3_esfpd")
}, {
"duration": 1.0,
"texture": ExtResource("1_86oql")
}],
"loop": true,
"name": &"side",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_0pb7g")
}, {
"duration": 1.0,
"texture": ExtResource("5_fy8jb")
}],
"loop": true,
"name": &"tend",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_suadg"]
radius = 30.7293
height = 99.8966

[sub_resource type="Animation" id="Animation_okw6l"]
resource_name = "hang"
length = 16.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5, 5.5, 6, 6.5, 7, 7.5, 8.5, 9, 9.5, 10, 10.5, 11, 16),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.69, 0.69, 0.72, 0.72, 0.765, 0.765, 0.89, 0.89, 0.935, 0.935, 0.98, 0.98, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="Animation" id="Animation_cfk38"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pi8cq"]
_data = {
"RESET": SubResource("Animation_cfk38"),
"hang": SubResource("Animation_okw6l")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7dwfg"]
texture = ExtResource("6_ptq3j")
separation = Vector2i(1, 1)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
24:16/0 = 0
25:16/0 = 0
26:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
24:17/0 = 0
25:17/0 = 0
26:17/0 = 0

[sub_resource type="TileSet" id="TileSet_ntfhx"]
sources/0 = SubResource("TileSetAtlasSource_7dwfg")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sf5cc"]
texture = ExtResource("7_gffhx")
separation = Vector2i(1, 1)
0:8/0 = 0
4:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0

[sub_resource type="TileSet" id="TileSet_3owri"]
sources/0 = SubResource("TileSetAtlasSource_sf5cc")

[node name="Cleaner" type="Node2D"]
script = ExtResource("1_5k4jp")

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(-738, 4)
scale = Vector2(0.903017, 1)
curve = SubResource("Curve2D_ydl8v")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(817.26, -3)
rotation = -0.0454695

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Path2D/PathFollow2D"]
scale = Vector2(0.18, 0.18)
sprite_frames = SubResource("SpriteFrames_q8fq3")
animation = &"side"

[node name="StaticBody2D" type="StaticBody2D" parent="Path2D/PathFollow2D/AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2D/AnimatedSprite2D/StaticBody2D"]
position = Vector2(-0.505043, 11.0996)
shape = SubResource("CapsuleShape2D_suadg")

[node name="Camera2D" type="Camera2D" parent="Path2D/PathFollow2D/AnimatedSprite2D"]
zoom = Vector2(5, 5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Path2D/PathFollow2D"]
libraries = {
"": SubResource("AnimationLibrary_pi8cq")
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ntfhx")
format = 2
layer_0/name = "empy"
layer_0/tile_data = PackedInt32Array(-131056, 1048576, 1, -131055, 1114112, 1, -131054, 1179648, 1)
layer_1/name = "clothe"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(-131056, 1048576, 2, -131055, 1114112, 2, -131054, 1179648, 2)

[node name="TileMap2" type="TileMap" parent="."]
tile_set = SubResource("TileSet_3owri")
format = 2
layer_0/name = "empy"
layer_0/tile_data = PackedInt32Array(-131048, 262144, 8, -131049, 196608, 8, -131050, 131072, 8, -131051, 65536, 8, -131052, 0, 8)
layer_1/name = "clothe"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(-131049, 196608, 9, -131050, 131072, 9, -131051, 65536, 9)

[node name="back" type="Timer" parent="."]
wait_time = 11.0

[node name="hide" type="Timer" parent="."]
wait_time = 16.3

[node name="restart" type="Timer" parent="."]
wait_time = 36.0

[connection signal="timeout" from="back" to="." method="_on_back_timeout"]
[connection signal="timeout" from="hide" to="." method="_on_hide_timeout"]
[connection signal="timeout" from="restart" to="." method="_on_restart_timeout"]
